# aaxxii-contracts

./: .gitignore  LICENSE  README.md
contracts/: Cargo.toml  Makefile
contracts/katherine-sale-contract/: Cargo.toml  README.md
contracts/katherine-sale-contract/src/: buyer.rs  constants.rs  deposit.rs  interface.rs  internal.rs  lib.rs  sale.rs  types.rs  utils.rs  withdraw.rs
contracts/katherine-sale-contract/src/tests/: mod.rs  utils.rs
contracts/meta-test-utils/: Cargo.toml
contracts/meta-test-utils/src/: lib.rs  types.rs
contracts/proposals-contract/: Cargo.toml
contracts/proposals-contract/src/: constants.rs  interface.rs  internal.rs  lib.rs  proposals.rs  types.rs  vote.rs  vote_counting.rs  voter.rs
contracts/proposals-contract/src/tests/: mod.rs  utils.rs
contracts/scripts/: deploy.sh  dev-create-sale.sh  dev-deploy.sh  dev-distribute-rewards.sh  dev-re-deploy.sh  dev-transfer-aaxxii.sh  re-deploy.sh
contracts/staking-position-contract/: Cargo.toml
contracts/staking-position-contract/src/: constants.rs  deposit.rs  interface.rs  internal.rs  lib.rs  locking_position.rs  staker.rs  types.rs  withdraw.rs
contracts/staking-position-contract/src/tests/: mod.rs  utils.rs
contracts/test-p-token/: Cargo.toml
contracts/test-p-token/src/: lib.rs
contracts/test-utils/: Cargo.toml
contracts/test-utils/src/: now.rs  utils.rs
workspaces/: Cargo.toml  Makefile
workspaces/scripts/: make_workspace.sh
workspaces/src/: main.rs  sales.rs
