[package]
name = "katherine-sale-contract"
version = "0.1.0"
edition = "2021"
authors = ["Narwallets.com <hello@narwallets.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"
uint = "0.9.5"
json = "0.12.4"

[dev-dependencies]
slug = "0.1.4"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
